# purwa

./: .env.example  .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PRD.md  README.md  RELEASING.md  TASK.md  purwa.toml.example
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: architecture.md  escape-hatches.md  getting-started.md  mvp-checklist.md  queue.md
purwa/: Cargo.toml
purwa-auth/: Cargo.toml
purwa-auth/src/: error.rs  extract.rs  lib.rs  password.rs  pg.rs  policy.rs  session.rs  token.rs
purwa-auth/tests/: session_flow.rs
purwa-cli/: Cargo.toml
purwa-cli/src/: cli.rs  deferred.rs  frontend.rs  main.rs  migrate_cmd.rs  runners.rs  scaffold.rs  util.rs
purwa-cli/src/generate/: mod.rs  templates.rs
purwa-cli/templates/frontend/: package.json.txt  vite.config.js.txt
purwa-cli/templates/frontend/src/: app.js.txt
purwa-cli/templates/frontend/src/Pages/: Error.svelte.txt  Welcome.svelte.txt
purwa-cli/templates/make/: auth.rs.txt  auth_up.sql  controller.txt  job.txt  migration_down.txt  migration_up.txt  model.txt  request.txt  seeder.txt  service.txt
purwa-cli/templates/scaffold/: Cargo.toml.txt  README.md.txt  app_cron_mod.rs.txt  app_jobs_mod.rs.txt  bin_queue_cron.rs.txt  bin_queue_worker.rs.txt  bin_seed.rs.txt  database_mod.rs.txt  database_seeders_mod.rs.txt  env.example.txt  lib.rs.txt  main.rs.txt  print_routes.rs.txt  purwa.toml.txt  routes_health.rs.txt  routes_welcome.rs.txt
purwa-cli/templates/scaffold/tests/: no_db_smoke.rs.txt  postgres_optional.rs.txt
purwa-core/: Cargo.toml
purwa-core/src/: config.rs  error.rs  extract.rs  lib.rs  logging.rs  routing.rs
purwa-core/tests/: config_state.rs  database_config.rs  validation_extract.rs
purwa-inertia/: Cargo.toml
purwa-inertia/src/: headers.rs  lib.rs  request.rs  shared.rs  vite_manifest.rs
purwa-inertia/tests/: inertia_protocol.rs  purwa_error_inertia.rs
purwa-macros/: Cargo.toml
purwa-macros/src/: lib.rs
purwa-orm/: Cargo.toml
purwa-orm/src/: lib.rs  sea.rs
purwa-orm/tests/: migrate_integration.rs
purwa-orm/tests/fixtures/migrations/: 20260101120000_s4_smoke.sql  20260101120001_reversible.down.sql  20260101120001_reversible.up.sql
purwa-queue/: Cargo.toml
purwa-queue/src/: lib.rs  redis_keys.rs
purwa-testing/: Cargo.toml
purwa-testing/src/: env.rs  http.rs  lib.rs  postgres.rs
purwa/src/: lib.rs
purwa/tests/: auto_registration.rs  resource_routes.rs
