[workspace]
resolver = "2"
members = [
    "purwa",
    "purwa-macros",
    "purwa-core",
    "purwa-inertia",
    "purwa-orm",
    "purwa-auth",
    "purwa-cli",
    "purwa-testing",
]

[workspace.package]
version = "0.1.1"
edition = "2024"
license = "MIT"
rust-version = "1.93"
repository = "https://github.com/sangkan-dev/purwa"
readme = "README.md"
