[package]
name = "purwa-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Empu — Purwa CLI (Artisan-equivalent)"

autobins = false

[[bin]]
name = "empu"
path = "src/main.rs"

[dependencies]
askama = "0.12.1"
clap = { version = "4.6.1", features = ["derive", "env"] }
heck = "0.5.0"
inquire = "0.7.5"
purwa-core = { path = "../purwa-core" }
purwa-orm = { path = "../purwa-orm" }
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
