[package]
name = "purwa-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
readme.workspace = true
documentation = "https://docs.rs/purwa-cli"
description = "Empu — Purwa CLI (Artisan-equivalent)"
keywords = ["purwa", "empu", "cli", "scaffold", "codegen"]
categories = ["command-line-utilities", "development-tools"]

autobins = false

[[bin]]
name = "empu"
path = "src/main.rs"

[dependencies]
askama = "0.12.1"
clap = { version = "4.6.1", features = ["derive", "env"] }
heck = "0.5.0"
inquire = "0.7.5"
purwa-core = { version = "0.2.0", path = "../purwa-core" }
purwa-orm = { version = "0.2.0", path = "../purwa-orm" }
serde_json = "1.0.149"
toml_edit = "0.22.22"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
