[package]
name = "purwa-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Purwa framework kernel — router, middleware, and HTTP primitives"

[dependencies]
axum = "0.8"
inventory = "0.3.24"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
tower = { version = "0.5.3", features = ["util"] }
