[package]
name = "purwa-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Purwa framework kernel — router, middleware, and HTTP primitives"

[dependencies]
axum = "0.8"
config = "0.15.22"
dotenvy = "0.15.7"
inventory = "0.3.24"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "postgres", "migrate", "tls-rustls-ring"] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "json"] }
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.27.0"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5.3", features = ["util"] }
