[package]
name = "purwa-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Proc-macros for Purwa routing (get/post/put/delete/resource)"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "visit-mut"] }
