[package]
name = "purwa-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
readme.workspace = true
documentation = "https://docs.rs/purwa-macros"
description = "Proc-macros for Purwa routing (get/post/put/delete/resource)"
keywords = ["purwa", "axum", "routing", "macros"]
categories = ["web-programming"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "visit-mut"] }
inventory = "0.3.24"
